Tests: split failing cell in notebook

--- a/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
+++ b/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
@@ -113,13 +113,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import phconvert as phc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import phconvert as phc\n",
     "print('phconvert version: ' + phc.__version__)"
    ]
   },
