--- a/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
+++ b/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
@@ -117,17 +117,6 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "import numpy as np"
    ]
   },
@@ -151,6 +140,28 @@
    "outputs": [],
    "source": [
     "print('phconvert version: ' + phc.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
