--- a/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
+++ b/notebooks/Convert ns-ALEX Becker-Hickl files to Photon-HDF5.ipynb
@@ -117,7 +117,41 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib\n",
+    "#matplotlib.use(\"Agg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -140,17 +174,6 @@
    "outputs": [],
    "source": [
     "print('phconvert version: ' + phc.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
